@@ -34,9 +34,9 @@
     {% if config.extra.logo %}
       <link rel="apple-touch-icon" href="{{ base_url }}/{{ config.extra.logo }}">
     {% endif %}
-    {% set icon = icon | default("assets/images/favicon-e565ddfa3b.ico") %}
-    <link rel="shortcut icon" type="image/x-icon" href="{{ base_url }}/{{ icon }}">
-    <link rel="icon" type="image/x-icon" href="{{ base_url }}/{{ icon }}">
+    {% set favicon = favicon | default("assets/images/favicon-e565ddfa3b.ico") %}
+    <link rel="shortcut icon" type="image/x-icon" href="{{ base_url }}/{{ favicon }}">
+    <link rel="icon" type="image/x-icon" href="{{ base_url }}/{{ favicon }}">
     <style>
       @font-face {
       	font-family: 'Icon';
